--- a/views/index.html
+++ b/views/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset='UTF-8'>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="author" href="/humans.txt">
-	<script type="text/javascript" src="lib/coffee-script.js"></script>
-	<script type="text/javascript" src="lib/jquery-1.11.0.min.js"></script>
-	<script type="text/javascript" src="lib/bootstrap.min.js"></script>
-	<script type="text/javascript" src="lib/dat.gui.min.js"></script>
-  <script type="text/javascript" src="lib/purl.js"></script>
-	<script type="text/coffeescript" src="periscope.coffee"></script>
+	<script type="text/javascript" src="/js/coffee-script.js"></script>
+	<script type="text/javascript" src="/js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/js/dat.gui.min.js"></script>
+  <script type="text/javascript" src="/js/purl.js"></script>
+	<script type="text/coffeescript" src="/app/periscope.coffee"></script>
   <title>Periscope</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="" id="home"><img src="img/logo.png"></a>
+      <a class="navbar-brand" href="" id="home"><img src="/img/logo.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -58,8 +58,8 @@
   </div>
 </body>
 
-<script type="text/coffeescript" src="appconfig.coffee"></script>
+<script type="text/coffeescript" src="/config/appconfig.coffee"></script>
 <script type="text/coffeescript">
-  
+
 </script>
 </html>
