--- a/views/index.html
+++ b/views/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset='UTF-8'>
+  <meta charset='UTF-8'>
 	<link rel="stylesheet" type="text/css" href="/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel="author" href="/humans.txt">
-	<script type="text/javascript" src="/js/coffee-script.js"></script>
-	<script type="text/javascript" src="/js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="/js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/js/dat.gui.min.js"></script>
   <script type="text/javascript" src="/js/purl.js"></script>
-	<script type="text/coffeescript" src="/app/periscope.coffee"></script>
   <title>Periscope</title>
 </head>
 <body>
@@ -56,10 +54,6 @@
 	</div>
   </div>
   </div>
+  <script type="text/javascript" src="/js/periscope.js"></script>
 </body>
-
-<script type="text/coffeescript" src="/config/appconfig.coffee"></script>
-<script type="text/coffeescript">
-
-</script>
 </html>
